versi 1.1 feature registrasi(spm, sppb), timbangan(timbangan hanya pilih) , logistik(input karung, approve rata2 berat karung)

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.2",
+        "riskihajar/terbilang": "^2.0",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
